--- a/app/src/main/res/layout/view_custom.xml
+++ b/app/src/main/res/layout/view_custom.xml
@@ -4,19 +4,21 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/testo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-       android:id="@+id/testo"
-        android:textAlignment="center"
         android:layout_marginLeft="10dp"
+        android:textAlignment="center"
+        android:layout_centerHorizontal="true"
         android:textSize="15sp" />
 
     <ImageButton
         android:id="@+id/image"
-        android:layout_below="@id/testo"
         android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_below="@id/testo"
         android:layout_margin="10dp"
-        android:layout_height="340dp" />
+        android:background="@color/white" />
 
 
 </RelativeLayout>
