--- a/app/src/main/res/layout/home_page_cittadino.xml
+++ b/app/src/main/res/layout/home_page_cittadino.xml
@@ -28,13 +28,13 @@
     <FrameLayout
         android:id="@+id/frame1"
         android:layout_width="wrap_content"
-        android:layout_height="135dp"
+        android:layout_height="130dp"
         android:layout_below="@id/switch1">
 
         <android.support.v7.widget.CardView
 
             android:layout_width="180dp"
-            android:layout_height="110dp"
+            android:layout_height="105dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -78,13 +78,13 @@
     <FrameLayout
         android:id="@+id/frame2"
         android:layout_width="wrap_content"
-        android:layout_height="135dp"
+        android:layout_height="130dp"
         android:layout_below="@id/frame1"
         android:layout_marginBottom="10dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="180dp"
-            android:layout_height="110dp"
+            android:layout_height="105dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -130,14 +130,15 @@
     <FrameLayout
         android:id="@+id/frame3"
         android:layout_width="match_parent"
-        android:layout_height="135dp"
+        android:layout_height="130dp"
         android:layout_below="@id/switch1"
         android:layout_marginLeft="10dp"
+
         android:layout_toRightOf="@id/frame1">
 
         <android.support.v7.widget.CardView
             android:layout_width="180dp"
-            android:layout_height="110dp"
+            android:layout_height="105dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -181,7 +182,7 @@
     <FrameLayout
         android:id="@+id/frame4"
         android:layout_width="match_parent"
-        android:layout_height="135dp"
+        android:layout_height="130dp"
         android:layout_below="@id/frame3"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="10dp"
@@ -190,7 +191,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="180dp"
-            android:layout_height="110dp"
+            android:layout_height="105dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:clickable="true"
@@ -231,6 +232,7 @@
 
     </FrameLayout>
 
+
     <!--  <TextView
           android:id="@+id/text"
           android:layout_width="match_parent"
@@ -244,11 +246,10 @@
     <com.synnapps.carouselview.CarouselView
         android:id="@+id/carouselView"
         android:layout_width="match_parent"
-        android:layout_height="392dp"
-        android:layout_below="@id/frame4"
+        android:layout_height="400dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="7dp"
+        android:layout_above="@id/navigationView"
         app:autoPlay="false"
         app:fillColor="@color/colorPrimary"
         app:pageColor="#FFFFFF"
