--- a/app/src/main/res/layout/view_custom_first.xml
+++ b/app/src/main/res/layout/view_custom_first.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="7dp"
         android:textAlignment="center"
         android:layout_centerHorizontal="true"
         android:textSize="18sp"
@@ -21,8 +22,7 @@
         android:layout_below="@id/testo"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="8dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
@@ -48,15 +48,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="5dp">
+            android:padding="5dp"
+            android:layout_marginBottom="3dp">
 
             <ImageView
                 android:id="@+id/logoIdentifica"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="8dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="5dp"
                 android:src="@drawable/recycle" />
 
             <TextView
@@ -68,7 +69,7 @@
                 android:layout_toRightOf="@+id/logoIdentifica"
                 android:text="Identifica la tipologia di un rifiuto"
                 android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textSize="17sp" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
