--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -157,7 +157,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:background="#00000000"
-                    android:hint="Indirizzo "
+                    android:hint="E-mail "
                     android:inputType="text"
                     android:letterSpacing="0.1"
                     android:textColor="#fff"
