--- a/app/src/main/res/layout/view_custom_first.xml
+++ b/app/src/main/res/layout/view_custom_first.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/testo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="7dp"
         android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:textSize="18sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        android:textSize="18sp" />
 
     <ImageButton
         android:id="@+id/image"
@@ -34,8 +34,8 @@
         android:layout_width="270dp"
         android:layout_height="55dp"
         android:layout_below="@id/image"
-        android:layout_marginLeft="10dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="3dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
@@ -48,8 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="5dp"
-            android:layout_marginBottom="3dp">
+            android:layout_marginBottom="3dp"
+            android:padding="5dp">
 
             <ImageView
                 android:id="@+id/logoIdentifica"
