--- a/app/src/main/res/layout/view_custom_first.xml
+++ b/app/src/main/res/layout/view_custom_first.xml
@@ -13,7 +13,8 @@
         android:layout_marginTop="7dp"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="19sp"
+        android:textStyle="bold|italic" />
 
     <ImageButton
         android:id="@+id/image"
