--- a/app/src/main/res/layout/calendario_utente.xml
+++ b/app/src/main/res/layout/calendario_utente.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/linear"
+        android:id="@+id/relative"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:background="@color/colorPrimary"
         android:orientation="horizontal">
@@ -17,59 +17,59 @@
         <ImageButton
             android:id="@+id/back"
             android:layout_width="50dp"
-            android:layout_height="35dp"
-            android:adjustViewBounds="true"
-            android:onClick="back"
+            android:layout_height="30dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            android:onClick="back"
             android:scaleType="fitCenter"
-            android:src="@drawable/left_arrow1"
-            android:background="@android:color/transparent"/>
+            android:src="@drawable/left_arrow1" />
 
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:layout_marginStart="96dp"
             android:layout_marginLeft="96dp"
             android:layout_marginTop="8dp"
-            android:layout_centerVertical="true"
             android:layout_marginBottom="8dp"
-            android:text="@string/app_name"
-            android:textSize="22sp" />
+            android:text="Calendario conferimento"
+            android:textSize="22sp"
+            android:textStyle="bold|italic" />
 
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
             android:background="@android:color/transparent"
 
             android:src="@drawable/user_circle" />
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/titolo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linear"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/black"
-        android:textSize="23sp"
-        android:textStyle="bold|italic"
-        tools:text="Calendario conferimento" />
-
     <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="335dp"
-        android:layout_below="@id/titolo"
-        android:layout_marginTop="30dp"
+        android:layout_below="@id/relative"
+        android:layout_marginTop="40dp"
 
         />
+
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigationView"
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        app:itemIconTint="@drawable/bottom_navigation_colors2"
+        app:itemTextColor="@drawable/bottom_navigation_colors2"
+        app:menu="@menu/navigation" />
 
 </RelativeLayout>
