--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,17 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_songs"
+        android:id="@+id/navigation_home"
         android:icon="@drawable/home"
         android:title="Home"/>
 
     <item
-        android:id="@+id/navigation_albums"
+        android:id="@+id/navigation_news"
         android:icon="@drawable/bell"
         android:title="Avvisi"/>
 
     <item
-        android:id="@+id/navigation_artists"
+        android:id="@+id/navigation_info"
         android:icon="@drawable/info"
         android:title="Contatti"/>
 
