--- a/app/src/main/res/layout/area_personale.xml
+++ b/app/src/main/res/layout/area_personale.xml
@@ -52,13 +52,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:elevation="12dp"
+        android:onClick="selectImage"
         android:innerRadius="0dp"
         android:shape="ring"
         android:thicknessRatio="1.9"
-        app:cardCornerRadius="150dp">
+        app:cardCornerRadius="120dp">
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_alignParentTop="true"
