--- a/app/src/main/res/layout/area_personale.xml
+++ b/app/src/main/res/layout/area_personale.xml
@@ -104,6 +104,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/cf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XXXXXXXXXXXXXXXX"
@@ -140,6 +141,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="nome.cogome@gmail.com"
@@ -178,6 +180,7 @@
             android:layout_weight="1" />
 
         <TextView
+            android:id="@+id/telefono"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="### #######"
