--- a/app/src/main/res/layout/area_personale.xml
+++ b/app/src/main/res/layout/area_personale.xml
@@ -220,10 +220,10 @@
             android:layout_weight="1" />
 
         <Switch
-            android:id="@+id/switch1"
+            android:id="@+id/switchConnesso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="easyMode" />
+            android:onClick="rimaniConnesso" />
 
     </LinearLayout>
 
