--- a/app/src/main/res/layout/statistiche_layout.xml
+++ b/app/src/main/res/layout/statistiche_layout.xml
@@ -78,10 +78,11 @@
 
         <TextView
             android:id="@+id/confTotali"
-            android:layout_width="wrap_content"
+            android:layout_width="148dp"
             android:layout_height="wrap_content"
             android:gravity="right"
             android:text="XXX"
+            android:layout_marginRight="3dp"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="italic" />
@@ -118,6 +119,7 @@
             android:layout_gravity="right"
             android:gravity="right"
             android:text="XXX"
+            android:layout_marginRight="3dp"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="italic" />
@@ -154,6 +156,7 @@
             android:layout_gravity="right"
             android:gravity="right"
             android:text="XXX"
+            android:layout_marginRight="3dp"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="italic" />
@@ -188,6 +191,7 @@
             android:layout_height="wrap_content"
             android:gravity="right"
             android:text="XXX"
+            android:layout_marginRight="3dp"
             android:textColor="@color/black"
             android:textSize="19sp"
             android:textStyle="italic" />
