--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,9 @@
     <color name="white">#FFFF</color>
     <color name="grey">#9999</color>
     <color name="black">#000</color>
+    <color name="lightgray">#e7e7e7</color>
+    <color name="lightgray02">#bfbfbf</color>
+    <color name="orange">#e33d1b</color>
+    <color name="darkorange">#cc2303</color>
+    <color name="red">#FF0000</color>
 </resources>
