--- a/app/src/main/res/layout/home_page_operatore_ecologico.xml
+++ b/app/src/main/res/layout/home_page_operatore_ecologico.xml
@@ -69,12 +69,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textView2">
 
-            <View
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:background="@color/black">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            </View>
+                <fragment android:name="com.example.domenico.myapp.SimpleScannerFragment"
+                    android:id="@+id/scanner_fragment"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_gravity="top"
+                    android:minHeight="?attr/actionBarSize"
+                    android:background="@color/actionbar_opacity"
+                    app:theme="@style/TransparentToolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </FrameLayout>
 
         </android.support.constraint.ConstraintLayout>
 
