--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="orange">#e33d1b</color>
     <color name="darkorange">#cc2303</color>
     <color name="red">#FF0000</color>
+    <color name="actionbar_opacity">#33000000</color>
 </resources>
