--- a/app/src/main/res/layout/popup_window.xml
+++ b/app/src/main/res/layout/popup_window.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Leggenda "
+        android:text="Legenda "
         android:layout_marginTop="20dp"
         android:textColor="@color/black"
         android:textSize="23sp"
