--- a/app/src/main/res/layout/area_personale.xml
+++ b/app/src/main/res/layout/area_personale.xml
@@ -29,7 +29,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -37,6 +37,7 @@
             android:layout_marginLeft="96dp"
             android:layout_marginTop="8dp"
             android:text="Profilo"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold|italic" />
