--- a/app/src/main/res/layout/contatti.xml
+++ b/app/src/main/res/layout/contatti.xml
@@ -27,7 +27,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="91dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -36,6 +36,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="Contatti"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold|italic" />
@@ -72,7 +73,7 @@ Qualcosa non funziona nell'applicazione ?"
 
     <TextView
         android:id="@+id/text2"
-        android:layout_width="wrap_content"
+        android:layout_width="163dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/text1"
         android:layout_centerHorizontal="true"
@@ -101,9 +102,8 @@ Qualcosa non funziona nell'applicazione ?"
             android:layout_marginRight="25dp"/>
 
 
-
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="297dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="RecyclApp@comunefisciano.gov"
