--- a/app/src/main/res/layout/statistiche_layout.xml
+++ b/app/src/main/res/layout/statistiche_layout.xml
@@ -27,7 +27,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="117dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -36,6 +36,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="Statistiche"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="22sp"
             android:textStyle="bold|italic" />
@@ -81,7 +82,7 @@
             android:layout_width="148dp"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="XXX"
+            android:text="XXX "
             android:layout_marginRight="3dp"
             android:textColor="@color/black"
             android:textSize="19sp"
@@ -118,7 +119,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:gravity="right"
-            android:text="XXX"
+            android:text="XXX "
             android:layout_marginRight="3dp"
             android:textColor="@color/black"
             android:textSize="19sp"
@@ -155,7 +156,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:gravity="right"
-            android:text="XXX"
+            android:text="XXX "
             android:layout_marginRight="3dp"
             android:textColor="@color/black"
             android:textSize="19sp"
@@ -190,7 +191,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:text="XXX"
+            android:text="XXX "
             android:layout_marginRight="3dp"
             android:textColor="@color/black"
             android:textSize="19sp"
